--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p class="text-gray-400 md:text-lg text-md md:text-start text-center">where Each Plate Weaves a Story Of Culinary <br>
           Mastery and Passionate Craftmanship</p>
         <div class="mx-auto my-4 flex justify-start space-x-4 items-center">
-          <button class="bg-[rgba(57,219,74,1)] text-white px-4 py-2 md:mx-3 mx-6 flex rounded-3xl">Order Now</button>
+          <button class="bg-[rgba(57,219,74,1)] text-white text-center md:px-4 px-8 md:py-2 md:mx-3 flex rounded-3xl">Order Now</button>
           <p class="font-semibold text-lg">Watch Video</p>
           <div class="border bg-slate-200 p-4 rounded-full">
             <img src="./images/Polygon 1.png" alt="vid">
@@ -233,9 +233,12 @@
       </div> 
        <!-- second container for the testimonies -->
         <div class="md:w-1/2 md:h-full my-2 justify-center md:text-start text-center mt-10 md:items-start">
-          <p class="text-red-500">Testimonials</p>
+            <p class="text-red-500">Testimonials</p>
+            <div class=" flex justify-end -mt-6">
+              <button id="btn" class="bg-[rgba(57,219,74,1)] w-10 h-10 space-x-4 p-1 rounded-full items-center  ml-4 text-white transition-all duration-700 ease-in-out"> ^ </button>
+            </div>
           <h1 class="font-bold md:text-5xl text-lg md:mx-auto">What Our Customers <br> Say about us
-          </h1><br>
+          </h1><br> 
           <p class="text-gray-400 md:text-md text-sm">I had the pleasure of dining at FOODI <br>
              last night and am still raving about the experience! <br> 
             The attention to detail in presentation and service was impeccable
